--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-spinners": "^0.8.0",
+    "react-table-filter": "^2.0.1",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
